--- a/ProjectFriendlyFire/Assembly-CSharp.csproj
+++ b/ProjectFriendlyFire/Assembly-CSharp.csproj
@@ -45,10 +45,13 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\CSVreader.cs" />
      <Compile Include="Assets\Scripts\FPSDisplay.cs" />
      <Compile Include="Assets\Scripts\Level.cs" />
      <Compile Include="Assets\Scripts\NetworkManagerHUD.cs" />
      <Compile Include="Assets\Scripts\Player.cs" />
+     <None Include="Assets\csv.txt" />
+     <None Include="Assets\Sample_Level1.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
